--- a/lab2form/no1234/Lab3.html
+++ b/lab2form/no1234/Lab3.html
@@ -37,7 +37,7 @@
                 <tr>
                 </tr>
             </table><br>
-            <input type="image" src="lab2html\image\buttonlogin.png" style="width: 5%;">
+            <input type="image" src="lab2form\image\buttonlogin.png" style="width: 5%;">
         </form>
     </div>
 </body>
